--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "crypto.js": "^1.1.3"
+    "body-parser": "^1.18.3",
+    "crypto.js": "^1.1.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.js"
   }
 }
